Solving Display Issues on mobile
Used wrapper for overflow problem on mobile. Also added clearTimeout to prevent leaks.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,3 +25,7 @@ body{
 .container {
   margin-bottom: 80px;
 }
+
+.wrapper{
+  overflow-x: hidden;
+}
